<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/g_minimalismo"
    >

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_mail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_dark"
        android:typeface="normal" />

    <EditText
        android:id="@+id/editMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ems="10"
        android:hint="@string/ph_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/background_material_light"
        android:textColorLink="@color/background_material_dark" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="normal"
        tools:textColor="@android:color/holo_orange_dark" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPass"
        android:hint="@string/ph_password"
        android:textColorHint="@color/background_material_light"
        android:layout_gravity="center_vertical" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_sesion"
        android:id="@+id/buttonLogin"
        android:layout_gravity="right"
        android:background="@drawable/custom_button"
        android:textColor="#fff"/>
</LinearLayout>