<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/g_minimalismo">

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:id="@+id/space" />

    <TextView
        android:id="@+id/textView"
        style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_m_login"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_below="@+id/space"
        android:layout_alignParentStart="true"
        ></TextView>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/bt_iamadmin"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/bt_admin"
        android:textColor="#fff"
        android:layout_marginTop="66dp"
        android:layout_alignTop="@+id/bt_iamacustomer"
        android:layout_alignStart="@+id/bt_iamacustomer" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/bt_iamacustomer"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:background="@drawable/custom_button"
        android:text="@string/bt_customer"
        android:textColor="#fff"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gen42_miniature"
        android:layout_below="@+id/bt_iamadmin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />
</RelativeLayout>